--- a/app/public/home.html
+++ b/app/public/home.html
@@ -34,7 +34,7 @@
         </div>
         <footer class="footer">
             <div class="container">
-                <p><a href='../data/friends.js'>API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub
+                <p><a href='/api/friends'>API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub
                         Repo</a></p>
             </div>
         </footer>
