--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -20,9 +20,9 @@
 
 <body>
 
-    <div class="container">
+    <div class="container" style="background-color: lemonchiffon">
 
-        <h1 style="color: blue"><strong>Survey Questions</strong></h1>
+        <h1><i style="color:dodgerblue" class="fa fa-facebook-square"><strong style="color:blue"> Survey Questions</strong></h1></i>
         <hr>
 
         <h3><strong>About You</strong></h3>
@@ -34,7 +34,7 @@
 
         <hr>
 
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="question1">
                 <h4 style="color:red">Question 1:</h4> Your friends would say you have a good sense
                 of humor.
@@ -48,7 +48,7 @@
                 <option value=5>5 (Strongly Agree)</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="question2">
                 <h4 style="color:red">Question 2:</h4> You try to live a healthy life.
             </label>
@@ -61,7 +61,7 @@
                 <option value=5>5 (Strongly Agree)</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="question3">
                 <h4 style="color:red">Question 3:</h4> Generally speaking, you are a creative
                 person.
@@ -75,7 +75,7 @@
                 <option value=5>5 (Strongly Agree)</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="question4">
                 <h4 style="color:red">Question 4:</h4> You like to travel.
             </label>
@@ -88,7 +88,7 @@
                 <option value=5>5 (Strongly Agree)</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="question5">
                 <h4 style="color:red">Question 5:</h4> Being around people energizes you.
             </label>
@@ -101,7 +101,7 @@
                 <option value=5>5 (Strongly Agree)</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="question6">
                 <h4 style="color:red">Question 6:</h4> You find it easy to stay relaxed and focused
                 even when there is some pressure.
@@ -115,7 +115,7 @@
                 <option value=5>5 (Strongly Agree)</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="question7">
                 <h4 style="color:red">Question 7:</h4> Money is important to you.
             </label>
@@ -128,7 +128,7 @@
                 <option value=5>5 (Strongly Agree)</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="question8">
                 <h4 style="color:red">Question 8:</h4> You prefer indoor activity over outdoor
                 activity.
@@ -142,7 +142,7 @@
                 <option value=5>5 (Strongly Agree)</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="question9">
                 <h4 style="color:red">Question 9:</h4> Taking risks and challenges excite you.
             </label>
@@ -155,7 +155,7 @@
                 <option value=5>5 (Strongly Agree)</option>
             </select>
         </div>
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="question10">
                 <h4 style="color:red">Question 10:</h4> You prefer warm weather over cool.
             </label>
@@ -177,13 +177,15 @@
     <!-- Submit Button -->
     <button type="submit" class="btn btn-primary btn-sml btn-block" id="submit"><i class="fa fa-check-circle"
             aria-hidden="true"></i>
-        <strong><h4 style= "color: chartreuse">Submit</h4></strong></button>
+        <strong>
+            <h4 style="color: chartreuse">Submit</h4>
+        </strong></button>
 
     <hr>
-    <footer class="footer">
+    <footer class="footer text-center">
         <div class="container">
-            <p><a href='/api/friends'>API Friends List</a> | <a href="https://github.com/afhaque/friendfinder">GitHub
-                    Repo</a></p>
+            <p><a href='/api/friends'>API Friends List</a> | <a href="https://github.com/_WRONG_CLICKED---GO_BACK.../_The_Real_Github_Repo_is_THE_RIGHT_ONE.">GitHub Repo</a> | <a href="https://github.com/DKMS37/friendfinder">The Real GitHub
+                        Repo</a></p>
         </div>
     </footer>
 
@@ -201,8 +203,7 @@
                 </div>
                 <div class="modal-body">
                     <h2 id="match-name"></h2>
-                    <img id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg"
-                        alt="">
+                    <img id="match-img" src="" alt="">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
