adding final touches

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -18,9 +18,9 @@
 <body style="background-image: url(https://tatica.fedorapeople.org/Themes/F12/wallpaper-mosaico2.svg)">
 
     <div class="container">
-        <div class="jumbotron text-black text-center" style="background-color:lemonchiffon ">
+        <div class="jumbotron text-black text-center" style="background-color:lemonchiffon">
 
-            <h1 style="color: dodgerblue"><i style="color:blue" class="fas fa-users"></i> Friend Finder</h1>
+            <h1 style="color: dodgerblue"><i style="color:blue" class="fas fa-users"><strong></i> Friend Finder</h1></strong>
 
             <hr>
 
@@ -36,12 +36,13 @@
                             Go to Survey</h4>
                     </button></a>
             </div>
-
+            
         </div>
+        <hr>
         <footer class="footer text-center">
             <div class="container">
 
-                <p><a style="color: cyan" href='/api/friends'>API Friends List</a> | <a style="color: cyan" href="https://github.com/DKMS37/friendfinder">GitHub
+                <p><a style="color: cyan" href='/api/friends'>API Friends List</a> <a style="color: floralwhite">|</a> <a style="color: cyan" href="https://github.com/DKMS37/friendfinder">GitHub
                         Repo</a></p>
 
             </div>
