--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -20,172 +20,172 @@
 
 <body style="background-image: url(https://tatica.fedorapeople.org/Themes/F12/wallpaper-mosaico2.svg)">
 
-    <div class="container" style="background-color: lemonchiffon">
+    <div class="container">
 
-        <h1><i style="color:dodgerblue" class="fas fa-users"><strong style="color:blue"> Survey Questions</strong></h1></i>
-        <hr>
+        <div class="jumbotron text-black text-center" style="background-color:lemonchiffon">
+            <h1><i style="color:dodgerblue" class="fas fa-users"><strong style="color:blue"> Survey Questions</strong></h1></i>
+            <hr>
 
-        <h3><strong>About You</strong></h3>
-        <h4> Name <span style="color:cornflowerblue">(Required)</span></h4>
-        <input type="text" id="name" class="form-control" required="">
+            <h3><strong>About You</strong></h3>
+            <h4> Name <span style="color:cornflowerblue">(Required)</span></h4>
+            <input type="text" id="name" class="form-control" required="">
 
-        <h4> Link to Photo Image <span style="color:cornflowerblue">(Required) </span></h4>
-        <input type="text" id="photo" class="form-control" required="">
+            <h4> Link to Photo Image <span style="color:cornflowerblue">(Required) </span></h4>
+            <input type="text" id="photo" class="form-control" required="">
 
-        <hr>
+            <hr>
 
-        <div class="form-group text-center">
-            <label for="question1">
-                <h4 style="color:red">Question 1:</h4> Your friends would say you have a good sense
-                of humor.
-            </label>
-            <select class="form-control" id="question1">
-                <option value>Select an option</option>
-                <option value=1>1 (Strongly Disagree)</option>
-                <option value=2>2</option>
-                <option value=3>3</option>
-                <option value=4>4</option>
-                <option value=5>5 (Strongly Agree)</option>
-            </select>
+            <div class="form-group text-center">
+                <label for="question1">
+                    <h4 style="color:red">Question 1:</h4> Your friends would say you have a good sense
+                    of humor.
+                </label>
+                <select class="form-control" id="question1">
+                    <option value>Select an option</option>
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group text-center">
+                <label for="question2">
+                    <h4 style="color:red">Question 2:</h4> You try to live a healthy life.
+                </label>
+                <select class="form-control" id="question2">
+                    <option value>Select an option</option>
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group text-center">
+                <label for="question3">
+                    <h4 style="color:red">Question 3:</h4> Generally speaking, you are a creative
+                    person.
+                </label>
+                <select class="form-control" id="question3">
+                    <option value>Select an option</option>
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group text-center">
+                <label for="question4">
+                    <h4 style="color:red">Question 4:</h4> You like to travel.
+                </label>
+                <select class="form-control" id="question4">
+                    <option value>Select an option</option>
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group text-center">
+                <label for="question5">
+                    <h4 style="color:red">Question 5:</h4> Being around people energizes you.
+                </label>
+                <select class="form-control" id="question5">
+                    <option value>Select an option</option>
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group text-center">
+                <label for="question6">
+                    <h4 style="color:red">Question 6:</h4> You find it easy to stay relaxed and focused
+                    even when there is some pressure.
+                </label>
+                <select class="form-control" id="question6">
+                    <option value>Select an option</option>
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group text-center">
+                <label for="question7">
+                    <h4 style="color:red">Question 7:</h4> Money is important to you.
+                </label>
+                <select class="form-control" id="question7">
+                    <option value>Select an option</option>
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group text-center">
+                <label for="question8">
+                    <h4 style="color:red">Question 8:</h4> You prefer indoor activity over outdoor
+                    activity.
+                </label>
+                <select class="form-control" id="question8">
+                    <option value>Select an option</option>
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group text-center">
+                <label for="question9">
+                    <h4 style="color:red">Question 9:</h4> Taking risks and challenges excite you.
+                </label>
+                <select class="form-control" id="question9">
+                    <option value>Select an option</option>
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group text-center">
+                <label for="question10">
+                    <h4 style="color:red">Question 10:</h4> You prefer warm weather over cool.
+                </label>
+                <select class="form-control" id="question10">
+                    <option value>Select an option</option>
+                    <option value=1>1 (Strongly Disagree)</option>
+                    <option value=2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
+                    <option value=5>5 (Strongly Agree)</option>
+                </select>
+            </div>
         </div>
-        <div class="form-group text-center">
-            <label for="question2">
-                <h4 style="color:red">Question 2:</h4> You try to live a healthy life.
-            </label>
-            <select class="form-control" id="question2">
-                <option value>Select an option</option>
-                <option value=1>1 (Strongly Disagree)</option>
-                <option value=2>2</option>
-                <option value=3>3</option>
-                <option value=4>4</option>
-                <option value=5>5 (Strongly Agree)</option>
-            </select>
-        </div>
-        <div class="form-group text-center">
-            <label for="question3">
-                <h4 style="color:red">Question 3:</h4> Generally speaking, you are a creative
-                person.
-            </label>
-            <select class="form-control" id="question3">
-                <option value>Select an option</option>
-                <option value=1>1 (Strongly Disagree)</option>
-                <option value=2>2</option>
-                <option value=3>3</option>
-                <option value=4>4</option>
-                <option value=5>5 (Strongly Agree)</option>
-            </select>
-        </div>
-        <div class="form-group text-center">
-            <label for="question4">
-                <h4 style="color:red">Question 4:</h4> You like to travel.
-            </label>
-            <select class="form-control" id="question4">
-                <option value>Select an option</option>
-                <option value=1>1 (Strongly Disagree)</option>
-                <option value=2>2</option>
-                <option value=3>3</option>
-                <option value=4>4</option>
-                <option value=5>5 (Strongly Agree)</option>
-            </select>
-        </div>
-        <div class="form-group text-center">
-            <label for="question5">
-                <h4 style="color:red">Question 5:</h4> Being around people energizes you.
-            </label>
-            <select class="form-control" id="question5">
-                <option value>Select an option</option>
-                <option value=1>1 (Strongly Disagree)</option>
-                <option value=2>2</option>
-                <option value=3>3</option>
-                <option value=4>4</option>
-                <option value=5>5 (Strongly Agree)</option>
-            </select>
-        </div>
-        <div class="form-group text-center">
-            <label for="question6">
-                <h4 style="color:red">Question 6:</h4> You find it easy to stay relaxed and focused
-                even when there is some pressure.
-            </label>
-            <select class="form-control" id="question6">
-                <option value>Select an option</option>
-                <option value=1>1 (Strongly Disagree)</option>
-                <option value=2>2</option>
-                <option value=3>3</option>
-                <option value=4>4</option>
-                <option value=5>5 (Strongly Agree)</option>
-            </select>
-        </div>
-        <div class="form-group text-center">
-            <label for="question7">
-                <h4 style="color:red">Question 7:</h4> Money is important to you.
-            </label>
-            <select class="form-control" id="question7">
-                <option value>Select an option</option>
-                <option value=1>1 (Strongly Disagree)</option>
-                <option value=2>2</option>
-                <option value=3>3</option>
-                <option value=4>4</option>
-                <option value=5>5 (Strongly Agree)</option>
-            </select>
-        </div>
-        <div class="form-group text-center">
-            <label for="question8">
-                <h4 style="color:red">Question 8:</h4> You prefer indoor activity over outdoor
-                activity.
-            </label>
-            <select class="form-control" id="question8">
-                <option value>Select an option</option>
-                <option value=1>1 (Strongly Disagree)</option>
-                <option value=2>2</option>
-                <option value=3>3</option>
-                <option value=4>4</option>
-                <option value=5>5 (Strongly Agree)</option>
-            </select>
-        </div>
-        <div class="form-group text-center">
-            <label for="question9">
-                <h4 style="color:red">Question 9:</h4> Taking risks and challenges excite you.
-            </label>
-            <select class="form-control" id="question9">
-                <option value>Select an option</option>
-                <option value=1>1 (Strongly Disagree)</option>
-                <option value=2>2</option>
-                <option value=3>3</option>
-                <option value=4>4</option>
-                <option value=5>5 (Strongly Agree)</option>
-            </select>
-        </div>
-        <div class="form-group text-center">
-            <label for="question10">
-                <h4 style="color:red">Question 10:</h4> You prefer warm weather over cool.
-            </label>
-            <select class="form-control" id="question10">
-                <option value>Select an option</option>
-                <option value=1>1 (Strongly Disagree)</option>
-                <option value=2>2</option>
-                <option value=3>3</option>
-                <option value=4>4</option>
-                <option value=5>5 (Strongly Agree)</option>
-            </select>
-        </div>
-
     </div>
-
     <br>
-    <br>
-
     <!-- Submit Button -->
     <button type="submit" class="submit btn btn-primary btn-sml btn-block" id="submit"><i class="fa fa-check-circle"
             aria-hidden="true"></i>
         <strong>
-            <h4 style="color: chartreuse">Submit</h4>
+            <h4 style="color:chartreuse">Submit</h4>
         </strong></button>
 
     <hr>
     <footer class="footer text-center">
         <div class="container">
-            <p><a style="color: cyan" href='/api/friends'>API Friends List</a> | <a style="color: cyan" href="https://github.com/_WRONG_CLICKED_<--_GO_BACK.../_The_Real_Github_Repo_is_THE_RIGHT_ONE.">GitHub
-                    Repo</a> | <a style="color: cyan" href="https://github.com/DKMS37/friendfinder">The Real GitHub
+            <p><a style="color: cyan" href='/api/friends'>API Friends List</a> <a style="color: floralwhite">|</a> <a
+                    style="color: cyan" href="https://github.com/_WRONG_CLICKED_<--_GO_BACK.../_The_Real_Github_Repo_is_THE_RIGHT_ONE.">GitHub
+                    Repo</a> <a style="color: floralwhite">|</a> <a style="color: cyan" href="https://github.com/DKMS37/friendfinder">The
+                    Real GitHub
                     Repo</a></p>
         </div>
     </footer>
@@ -197,17 +197,17 @@
         <div class="modal-dialog">
 
             <!-- Modal content-->
-            <div class="modal-content">
+            <div class="modal-content" style="background-color:lemonchiffon">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">×</button>
-                    <h2 class="modal-title"><strong>Best Match</strong></h2>
+                    <h2 class="modal-title text-center"><strong style="color:blue">Best Match</strong></h2>
                 </div>
-                <div class="modal-body img-fluid">
-                    <h2 id="match-name"></h2>
-                    <img class="img-fluid" id="match-img" src="" alt="">
+                <div class="modal-body img-fluid text-center">
+                    <h2 class="text-center" id="match-name"></h2>
+                    <img class="img-fluid rounded img-thumbnail mx-auto d-block" id="match-img" src="" alt="">
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <div class="modal-footer text-center">
+                    <button type="button" class="btn btn-default text-center" data-dismiss="modal">Close</button>
                 </div>
             </div>
 
